--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.23.0",
     "yup": "^1.4.0"
   },
